# TestTask

./: CMakeLists.txt  ListOfObjects.cpp  ListOfObjects.h  Object.cpp  Object.h  Point.cpp  Point.h  UI.cpp  UI.h  input.txt  main.cpp  output.txt
